"Standards popup overlapping issue Fixed"

--- a/src/main/java/org/ednovo/gooru/client/mvp/home/Newlogin-popup.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/home/Newlogin-popup.css
@@ -1252,6 +1252,7 @@ text-align: left;
 }
 .standarBodyContainer button{
 	margin-right:10px;
+	margin-top:5px;
 }
 .scrollBar{
 	border: 1px solid #ccc;
